# AURA

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
aura/: .env.example  pyproject.toml  requirements.txt
aura/app/: main.py
aura/app/agents/: graph.py
aura/app/core/: config.py  crypto.py  logging.py  rate_limit.py  security.py  security_headers.py  url_safety.py
aura/app/db/: qdrant_client.py  sqlite.py
aura/app/models/: agent_state.py  api_schemas.py  audit.py  itsm.py  jsm.py  user.py
aura/app/rag/: chunker.py  document_converter.py  embedder.py  embedder_base.py  embedder_openai_compatible.py  ingestion_pipeline.py  retriever.py
aura/app/services/: ai_config_service.py  assignment_service.py  audit_logger.py  collision_service.py  comment_poster.py  conversation_service.py  ingestion_lock.py  itsm_client.py  itsm_provider_state.py  jsm_client.py  kill_switch.py  notification_bus.py  rollback_store.py  sla_engine.py  tenant_registry.py  ticket_status.py  transition_service.py  zendesk_client.py
aura/scheduler/: scheduler.py
aura/scheduler/jobs/: assignment_timeout_checker.py  conversation_watcher.py  ingestion_sync.py  jsm_poller.py  sla_checker.py
aura/tests/: conftest.py
aura/tests/test_agents/: test_abstention_node.py  test_ai_config_gate_node.py  test_assignment_node.py  test_audit_finalizer_node.py  test_autonomy_node.py  test_collision_node.py  test_confidence_gate_node.py  test_graph.py  test_kill_switch_node.py  test_priority_scorer_node.py  test_sla_node.py  test_triage_node.py
aura/tests/test_api/: test_admin_audit_date_filter.py  (+14 more)
(+144 files in other folders)
