[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aura"
version = "0.1.0"
description = "AURA — Agentic Unified Resolution Assistant (Phase 0: Knowledge Ingestion Pipeline)"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scheduler*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]
